the-obsidian-table-frontend/src/assets/base.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Geist:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

:root {
    --BGBackground: #131314;
    --Stroke: #1A1A1A;
    --WhiteAshes: #E5E2E3;
    --WhitePink: #C7C4D7;
    --Obsidian-original: #A020F0;
    --Obsidian-faded: #C0C1FF;
    --max-section-w: 1200px;
}

.playfair-display {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

html, body {
    background-color: var(--BGBackground);
    color: var(--WhiteAshes);
    scroll-behavior: smooth;
    scroll-padding-top: 95px;
}

html, body, h1, h2, h3, h4, h5 {
    margin: 0;
    padding: 0;
    font-family: 'Inter';
    font-size: 16px;
}

h1, h2, h3, h4, h5 {
    font-family: 'Geist';
}

main {
    .section {
        padding: 0 2rem;
        margin-top: 48px;
    }
}

p {
    color: var(--WhitePink);
    letter-spacing: normal;
    font-size: 20px;
}

.uppercase {
    text-transform: uppercase;
}

.btn-violet {
    background-color: var(--Obsidian-original);
    color: var(--WhiteAshes);
    border: none;
    padding: 1rem 2rem;
    font-family: 'Geist';
    text-decoration: none;
}

a:not(.btn) {
    position: relative;
    color: var(--Obsidian-original);
    text-decoration: none;
    transition: color .2s;
    text-transform: capitalize;
    font-family: 'Geist', sans-serif;
    
    &:hover {
        cursor: pointer;
        color: var(--Obsidian-faded);

        &.underline:after {
            background-color: var(--Obsidian-faded);
        }
    }

    &.underline:after {
        content: "";
        position: absolute;
        height: 1px;
        width: 100%;
        background-color: var(--Obsidian-original);
        bottom: -2px;
        left: 0;
        transition: background .2s;
    }
}

hr {
    height: 1px;
    width: 100%;
    border: none;
    background-color: var(--Stroke);
}

.p-card {
    width: 100%;

    img {
        width: 100%;
    }
}

.capitalize {
    text-transform: capitalize;
}

.desktop-only {
    display: none;
}

footer {
    border-top: 1px solid var(--Stroke);
    .footer-wrapper {
        display: flex;
        flex-direction: column-reverse;
        gap: 12px;
        padding: 24px;

        span {
            color: var(--Obsidian-original);
            font-size: 24px;
            margin-bottom: 5px;
        }

        p {
            font-size: 14px;
            margin-bottom: 0;
            opacity: .7;
        }

        .links {
            display: flex;
            flex-direction: column;

            a {
                width: max-content;
                margin-bottom: 12px;
    
                &:last-of-type {
                    margin-bottom: 24px;
                }
            }
        }
    }
}


@media (min-width: 768px) {
    .mobile-only {
        display: none;
    }
    .desktop-only {
        display: unset;
    }

    .main {
        .section {
            padding: 0;
            max-width: var(--max-section-w);
            margin-left: auto;
            margin-right: auto;
        }
    }

    footer {
        .footer-wrapper {
            flex-direction: row;
            justify-content: space-between;

            padding: 24px;

            p {
                margin: 0;
            }

            .links {
                flex-direction: row-reverse;
                column-gap: 24px;
                a {
                    margin: 0;
                    height: max-content;
                    font-size: .8rem;

                    &:first-of-type {
                        margin: 0;
                    }
                }
            }
        }
    }
}

